tt14 * F - THM: first commit * B - tt14:collapse fixes

--- a/js-14-1/style.css
+++ b/js-14-1/style.css
@@ -7,7 +7,9 @@
 
 html { height: 100%; }
 
-body { background-color: #ffffff; color: #555; font-family: 'inconsolata'; font-size: 15px; height: 100%;
+/* font-family: 'inconsolata'; */
+
+body { background-color: #ffffff; color: #555;  font-size: 15px; font: 12pt monospace; height: 100%;
 	line-height: 18px; margin: 0px; /* overflow: hidden; */ }
 
 a { color: rgb(206, 33, 33); text-decoration: none; }
@@ -30,13 +32,14 @@ input[ type = range ]::-webkit-slider-thumb { -webkit-appearance: none; backgrou
 main { border: 0px; height: 100%; left: var( --mnu-width ); margin: 0; /* overflow: hidden; */
 	position: absolute; width: calc(100% - var( --mnu-width ) );  }
 
+
 summary { cursor: pointer; font-size: 1rem; font-weight: bold; outline: none; }
 
 
-#aViewSource { position: fixed; bottom: 20px; right: 20px; padding: 8px; color: #fff;
+#butViewSource { position: fixed; bottom: 20px; right: 20px; padding: 8px; color: #fff;
 	background-color: #555; opacity: 0.7; }
 
-#aViewSource:hover { cursor: pointer; opacity: 1; }
+#butViewSource:hover { cursor: pointer; opacity: 1; }
 
 
 #divContents { border: 0px solid red; margin: 0 auto; max-width: 40rem;}
@@ -44,8 +47,9 @@ summary { cursor: pointer; font-size: 1rem; font-weight: bold; outline: none; }
 
 #expandButton { height: 32px; position: absolute; left: var( --mnu-width ); top: 0px; width: 32px; transition: left 0.5s; z-index: 1; }
 
+/* background: #fafafa; */
 
-#navPanel { background: #fafafa; height: 100%; left: 0px; overflow: auto; position: fixed;
+#navPanel { height: 100%; left: 0px; overflow: auto; position: fixed;
 	transition: left 0.5s; width: var( --mnu-width ); z-index: 1; }
 
 #navPanel h1 { margin-top: 30px; margin-bottom: 5px; font-size: 25px; font-weight: normal; }
